--- a/board/skin/default/test.tmpl
+++ b/board/skin/default/test.tmpl
@@ -16,4 +16,6 @@ You have got a message.
 <a href="read.cgi?bid=<tmpl_var board_id>&aid=<tmpl_var article_id>"><tmpl_var poll_id></a>
 </tmpl_loop>
 
+MOBILE DEVICE: <tmpl_var mobile_device>
+
 <tmpl_include _footer.tmpl>
