Further synchronization with server-side code * Included a stamp of this sync branch * myarticle, mycomment functionality from eruhkim added * apache2 setting slight ServerAlias addition * very slight style changes of the register template

--- a/admin/skin/default/register.tmpl
+++ b/admin/skin/default/register.tmpl
@@ -48,9 +48,9 @@
 <tmpl_if list>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tr>
-    <td class="thead" width="30">#</td>
-    <td class="thead">no</td>
-    <td class="thead" nowrap>기</td>
+    <td class="thead" width=30>#</td>
+    <td class="thead" width=50>no</td>
+    <td class="thead" width=30 nowrap>기</td>
     <td class="thead">이름 (아이디) / 생일</td>
     <td class="thead">소속 / 이메일</td>
     <td class="thead">신청일 / 추천</td>
