--- a/board/skin/default/bookmarkgrp.tmpl
+++ b/board/skin/default/bookmarkgrp.tmpl
@@ -38,6 +38,14 @@
     <li class="name"><a href="read_scrap.cgi">[<tmpl_var T_SCRAPBOOK>]</a></li>
     <li class="count"></li>
 </ul></li>
+<li class="item"><ul>
+    <li class="name"><a href="myarticle.cgi">[내가 쓴 글 보기]</a></li>
+    <li class="count"></li>
+</ul></li>
+<li class="item"><ul>
+    <li class="name"><a href="mycomment.cgi">[내가 쓴 짧은답글 보기]</a></li>
+    <li class="count"></li>
+</ul></li>
 </tmpl_if>
 
 </ul>
