Synchronization of register page * Just changes because time flowed (three years!)

--- a/reg/skin/default/register.tmpl
+++ b/reg/skin/default/register.tmpl
@@ -79,10 +79,10 @@ function open_idcheck_win() {
     </td>
 </tr>
 <tr>
-    <td nowrap class="lhead">전자우편</td>
+    <td nowrap class="lhead">E-mail</td>
     <td class="iteml">
         <input type="text" name="email" value="<tmpl_var email>" class="text" style="width:350px">
-        <tmpl_unless email><div class="msg">비밀번호 분실시 통보되는 주소입니다.<br>주로 사용하는 주소를 하나 입력해 주세요.<br> 이메일 확인이 안될 경우 가입처리가 불가능합니다.</div></tmpl_unless>
+        <tmpl_unless email><div class="msg">비밀번호 분실시 통보되는 이메일 주소입니다.<br>주로 사용하는 이메일 주소를 하나 입력해 주세요.<br> 이메일 확인이 안될 경우 가입처리가 불가능합니다.</div></tmpl_unless>
     </td>
 </tr>
 <tr>
