Further synchronization to the server * style.css was neglected * user cgi to the local library instead of the common library...

--- a/main/skin/default/style.css
+++ b/main/skin/default/style.css
@@ -530,6 +530,9 @@ ul.article-list li { display: table-cell; padding: 3px 3px 3px 3px; border-top: 
 ul.article-list li a { color: black; }
 ul.article-list li.board { width: 445px; outline: 1px dotted red; }
 ul.article-list li.no    { width:  10px; text-align: left; }
+ul.article-list li.board2{ width: 300px; }
+ul.article-list li.article{width: 300px; }
+ul.article-list li.comment{width: 300px; display: block;}
 ul.article-list li.title { width: 445px; }
 ul.article-list li.title a { display: block; }
 ul.article-list li.name  { width: 125px; white-space: nowrap; text-align: left; } /* name */
