The user edit window link to add majors had essentially a typo. Fixed. -WWolf

--- a/user/skin/default/edit.tmpl
+++ b/user/skin/default/edit.tmpl
@@ -159,7 +159,7 @@
         <a href="majors.cgi?mid=<tmpl_var major_id>&pid=<tmpl_var parent_id>"><tmpl_var major></a><tmpl_unless __last__>, </tmpl_unless>
             </tmpl_loop>
         </tmpl_if>
-        [<a href="majors.cgi">추가</a>]
+        [<a href="major.cgi">추가</a>]
     </td>
 </tr>
 <tr>
