--- a/main/skin/default/style.css
+++ b/main/skin/default/style.css
@@ -80,8 +80,7 @@ a.button    { cursor: pointer; }
 a.attach span.error,
 a.auto span.error { color: black; background: #fcc; }
 a.auto img  { vertical-align: baseline; outline: 0; }
-/* a.auto { overflow: hidden; text-overflow: ellipsis; display: inline-block; } */
-a.auto { overflow: hidden; text-overflow: ellipsis; }
+a.auto { overflow: hidden; text-overflow: ellipsis; display: inline-block; }
 embed.auto { width: 480px; height: 385px; }
 @media screen and (max-width: 320px) {
   a.auto { max-width: 300px; white-space: nowrap;}
