"Hot news" article num limit removed. Extended to 5 days.
* There appaears changes in uplaod_photo.tmpl, but nothing special.

--- a/user/skin/default/upload_photo.tmpl
+++ b/user/skin/default/upload_photo.tmpl
@@ -16,7 +16,7 @@
 <INPUT TYPE="submit" VALUE="Send photo" WIDTH=30 CLASS="button" STYLE="width:100px">
 </FORM>
 <BR>
-<div id="msg">얼굴 부분 세로 길이가 105 pixel 이상이고, 양쪽 눈이 모두 보이는 사진만 등록됩니다. 측면 사진, 얼굴을 알아볼 수 없는 사진, 선글래스를 쓴 사진, 흑백 사진, 얼굴의 일부가 가려진 사진, 지나치게 기울어진 사진, 본인 확인이 안될 정도로 찡그린 사진, 아기 때 사진 등은 등록되지 않습니다. 크기가 작은 사진은 절대로 등록되지 않으며, 모든 사진은 바위지기가 편집한 뒤에 등록되니 절대로 얼굴을 작게 편집하지 마세요.</div>
+<div id="msg">얼굴 부분 세로 길이가 105 pixel 이상이고, 양쪽 눈이 모두 보이는 사진만 등록됩니다. 측면 사진, 얼굴을 알아볼 수 없는 사진, 선글래스를 쓴 사진, 흑백 사진, 얼굴의 일부가 가려진 사진, 지나치게 기울어진 사진, 본인 확인이 안될 정도로 찡그린 사진, 아기 때 사진 등은 등록되지 않습니다. 크기가 작은 사진은 절대로 등록되지 않으며, 모든 사진은 바위지기가 편집한 뒤에 등록되니 절대로 얼굴을 작게 편집하지 마세요.<BR><B>확장자가 jpg인 사진만 등록됩니다. gif나 png 등의 확장자를 가진 사진은 jpg로 변환해서 올려주세요.</B></div>
 </TD></TR></TABLE>
 </tmpl_if>
 
