Final form before DB population
The first main page is showing successfully.

--- a/board/skin/default/_login_form.tmpl
+++ b/board/skin/default/_login_form.tmpl
@@ -29,7 +29,7 @@
   <td colspan="2">
   <fieldset class="links">
   <a href="mailto:webmaster@bawi.org">접속문의</a>
-  <a href="http://www.bawi.org/reg/">회원가입</a>
+  <a href="/reg/">회원가입</a>
   <tmpl_if msg><div><tmpl_var msg></div></tmpl_if>
   </fieldset>
   </td>
