--- a/board/skin/default/opml.tmpl
+++ b/board/skin/default/opml.tmpl
@@ -5,7 +5,7 @@
  </head>
  <body>
   <outline title="BawiXBoard Resources">
-   <tmpl_loop outline><outline type="rss" title="<tmpl_var board_title>" description="" xmlUrl="http://www.bawi.org/xboard/rss.cgi?bid=<tmpl_var board_id>" htmlUrl="http://www.bawi.org/xboard/read.cgi?bid=<tmpl_var board_id>" /> 
+   <tmpl_loop outline><outline type="rss" title="<tmpl_var board_title>" description="" xmlUrl="/xboard/rss.cgi?bid=<tmpl_var board_id>" htmlUrl="/xboard/read.cgi?bid=<tmpl_var board_id>" /> 
   </tmpl_loop></outline>
  </body>
 </opml>
