--- a/main/skin/default/style.css
+++ b/main/skin/default/style.css
@@ -88,6 +88,9 @@ embed.auto { width: 480px; height: 385px; }
   object.auto { width: 300px; height: 250px; }
   iframe.auto { width: 300px; height: 250px; }
 }
+/* YouTube and Vimeo. http://embedresponsively.com */
+.video-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; }
+.video-container > iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 .opt.hidden { display: none; }
 .toggle.hidden { display: none; }
 /**************************************************************************************/
