--- a/main/skin/default/style.css
+++ b/main/skin/default/style.css
@@ -83,7 +83,7 @@ a.auto img  { vertical-align: baseline; outline: 0; }
 a.auto { overflow: hidden; text-overflow: ellipsis; word-wrap: break-all; word-break: break-all; }
 embed.auto { width: 480px; height: 385px; }
 @media screen and (max-width: 320px) {
-  a.auto { max-width: 300px; white-space: nowrap;}
+  a.auto { max-width: 300px; }
   embed.auto { width: 300px; height: 250px; }
   object.auto { width: 300px; height: 250px; }
   iframe.auto { width: 300px; height: 250px; }
