Remove pre-wrap from li.body.text css
In mobile, it is very obvious that body texts are not justified, while mobile texts are justified.

This is because white-space: pre-wrap and text-align: justified are not supposed to work together.
http://stackoverflow.com/questions/30887273/justify-content-with-pre-wrap

Since newlines are <br>-ed, the only use case is tabs or spaces.

pre-wrap: sequences of whitespace are preserved. Lines are broken at newline characters, at <br>, and as necessary to fill line boxes.
https://developer.mozilla.org/en-US/docs/Web/CSS/white-space

Tab cases are not usual. The only case that matters is multiple spaces. I don't think that is used often.
If such a case is necessary, then maybe we should consider using &nbsp; for a sequence of spaces, not using pre-wrap.
I do think mobile readability is more important than this edge case.

--- a/main/skin/default/style.css
+++ b/main/skin/default/style.css
@@ -404,7 +404,7 @@ ul.article > li.created { xxpadding-left: 8px; white-space: nowrap; }
 ul.article > li.count   { xxpadding-left: 8px; white-space: nowrap; }
 ul.article > li.visualClear { clear: left; width: 100%; border-bottom: 1px solid #C5CDD8; height: 0; padding: 0; }
 ul.article > li.body        { float: none; clear: both; overflow: visible; width: 100%; padding: 6px 0 5px 0; border-bottom: 1px solid #C5CDD8; }
-ul.article > li.body.text   { line-height: 170%; white-space: pre-wrap; text-align: justify; padding: 20px 0 10px 0;  }
+ul.article > li.body.text   { line-height: 170%; text-align: justify; padding: 20px 0 10px 0;  }
 ul.article > li.body.text   { border-bottom: 0; }
 ul.article > li.body.text   { max-width: 600px; margin: 0 auto 0 auto; }
 ul.article > li.body.text table.safety.wrapper { position: relative; width: 100%; }
