--- a/user/skin/default/edit.tmpl
+++ b/user/skin/default/edit.tmpl
@@ -163,7 +163,7 @@
     </td>
 </tr>
 <tr>
-    <td class="lhead" nowrap>학위</td>
+    <td class="lhead" nowrap>학위/경력</td>
     <td class="iteml">
         <tmpl_if degree>
             <tmpl_loop degree>
