--- a/user/skin/default/profile.tmpl
+++ b/user/skin/default/profile.tmpl
@@ -159,7 +159,7 @@
         </tmpl_if>
         <tmpl_if degree>
 <tr>
-    <td class="lhead" nowrap>학위</td>
+    <td class="lhead" nowrap>학위/경력</td>
     <td class="iteml">
             <tmpl_if has_degree>
                 <tmpl_loop degree>
