6개월 개인정보 수정 페이지에 경력사항소개

--- a/main/skin/default/userinfo_outdated.tmpl
+++ b/main/skin/default/userinfo_outdated.tmpl
@@ -16,6 +16,7 @@ function update() {
 <p><a href="<tmpl_var user_url>/edit.cgi" class="user-popup" target="bw_profile">[개인정보]</a>를 변경한 지 6개월 이상이 경과되었습니다.
    변동사항을 수정한 뒤 저장해 주세요.</p>
 <p>변동사항이 없더라도 저장을 해야 최종수정 날짜가 오늘로 바뀝니다.
+<p><strong>이제 레지던트/펠로우/포닥 경력사항도 입력하실 수 있습니다!</strong>
    <a href="/">[천년바위 들어가기]</a></p>
   </div>
 </div><!-- content -->
