Move to https urls from http.

--- a/admin/skin/default/_html_header.tmpl
+++ b/admin/skin/default/_html_header.tmpl
@@ -19,7 +19,7 @@
 <meta name="bawi-mobile-device" id="bawi-mobile-device" content="yes" />
 </tmpl_if>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/prototype/1.6/prototype.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/prototype/1.6/prototype.js"></script>
 <link rel="stylesheet" type="text/css" href="skin/<tmpl_if skin><tmpl_var skin><tmpl_else>default</tmpl_if>/style.css" />
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="<tmpl_var main_url>/skin/default/IE70Fixes.css" /><![endif]-->
