Fix a bug introduced from provious commit (@52ba880)
(cherry picked from commit 464a37cf5323bdd377467d5ef8ffd0a302185e09)

--- a/main/skin/default/style.css
+++ b/main/skin/default/style.css
@@ -483,6 +483,7 @@ ul.comment-form input.submit { font-size: 100%; width: 100%; }
   ul.comment-form > li.body   { width: auto; }
   ul.comment-form > li.submit { width: 4em; padding: 0px 0px 3px 4px; }
   ul.comment-form input.text  { width:  95%; }
+}
 /**********************************************************************************/
 ul.article > li.attach { }
 ol.attach             { list-style: decimal; padding: 0px; overflow: hidden; }
